--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "react-typescript-boilerplate",
+  "name": "react-angularjs-bridge",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node" : ">=8.11.0",
+    "npm" : ">=5.6.0"
+  },
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
